Fix: refactor menu and other styles in hero section

--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
             <div class="container">
                 <div class="hero__header-inner grid">
                     <a class="logo hero__logo" href="#">
-                        <img class="logo-img" src="../Monstrum/img/Logo Desktop.svg" alt="" class="">
+                        <img class="logo-img" src="../Monstrum/img/Logo Desktop.svg" alt="">
                     </a>
                     <nav class="nav header__nav">
                         <ul class="header__nav-column">
-                            <li class="header__nav-item">Projects</li>
-                            <li class="header__nav-item">Approach</li>
-                            <li class="header__nav-item">News</li>
+                            <li class="header__nav-item menu-font">Projects</li>
+                            <li class="header__nav-item menu-font">Approach</li>
+                            <li class="header__nav-item menu-font">News</li>
                         </ul>
                         <ul class="header__nav-column">
-                            <li class="header__nav-item">About</li>
-                            <li class="header__nav-item">Contact</li>
-                            <li class="header__nav-item">Team </li>
+                            <li class="header__nav-item menu-font">About</li>
+                            <li class="header__nav-item menu-font">Contact</li>
+                            <li class="header__nav-item menu-font">Team </li>
                         </ul>
                     </nav>
                     <div class="header__lang">
-                        <div class="header__lang-btn">EN</div>
-                        <div class="header__lang-btn">DA</div>
+                        <p class="header__lang-btn menu-font  menu-font--opacity1">EN</p>
+                        <p class="header__lang-btn menu-font  menu-font--opacity1">DA</p>
                     </div>
                 </div>
             </div>
