Feat: make footer

--- a/index.html
+++ b/index.html
@@ -194,11 +194,74 @@
         </div>
     </section>
     <footer class="footer rounded-corners rounded-corners--black">
-
+        <div class="container">
+            <div class="footer__marquee"></div>
+            <div class="footer-talk">
+                <div class="footer__inner-wrap">
+                    <h1 class="footer-talk__title footer-talk__title--right-img headline1 headline1--white">Want to have
+                    </h1>
+                    <h1 class="footer-talk__title footer-talk__title--left-img headline1 headline1--white">a talk?</h1>
+                </div>
+                <div class="footer-talk__btn footer-talk__btn-text">Contact</div>
+            </div>
+            <div class="footer-bottom grid">
+                <div class="footer-bottom__info">
+                    <a class="logo footer-bottom__logo" href="#">
+                        <img class="logo-img" src="../Monstrum/img/Logo Desktop.svg" alt="">
+                    </a>
+                    <p class="footer-bottom__tel menu-font">
+                        + 45 33 22 10 77
+                    </p>
+                    <p class="footer-bottom__adress menu-font">
+                        Engager 3 2605<br>Brøndby Denmark
+                    </p>
+                    <p class="footer-bottom__copy menu-font">
+                        © Monstrum, Inc. All rights reserved
+                    </p>
+                </div>
+                <ul class="footer-bottom__mail">
+                    <li class="footer-bottom__mail-item menu-font menu-font--opacity1">
+                        E-mail
+                    </li>
+                    <li class="footer-bottom__mail-item menu-font">
+                        post@monstrum.dk
+                    </li>
+                </ul>
+                <nav class="nav footer-bottom__nav">
+                    <ul>
+                        <li class="footer-bottom__nav-item">
+                            <a class="menu-font menu-font--opacity1" href="#">Social</a>
+                        </li>
+                        <li class="footer-bottom__nav-item">
+                            <a class="menu-font" href="#">Instagram</a>
+                        </li>
+                        <li class="footer-bottom__nav-item">
+                            <a class="menu-font" href="#">Facebook</a>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li class="footer-bottom__nav-item">
+                            <a class="menu-font" href="#">Projects</a>
+                        </li>
+                        <li class="footer-bottom__nav-item">
+                            <a class="menu-font" href="#">Approach</a>
+                        </li>
+                        <li class="footer-bottom__nav-item">
+                            <a class="menu-font" href="#">News</a>
+                        </li>
+                        <li class="footer-bottom__nav-item">
+                            <a class="menu-font" href="#">About</a>
+                        </li>
+                        <li class="footer-bottom__nav-item">
+                            <a class="menu-font" href="#">Contact</a>
+                        </li>
+                        <li class="footer-bottom__nav-item">
+                            <a class="menu-font" href="#">Team</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
     </footer>
-
-
-
 </body>
 
 </html>
