Fix: repair paths for images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="hero__header-inner grid">
                     <a class="logo hero__logo" href="#">
-                        <img class="logo-img" src="../Monstrum/img/Logo Desktop.svg" alt="">
+                        <img class="logo-img" src="img/Logo Desktop.svg" alt="">
                     </a>
                     <nav class="nav header__nav">
                         <ul class="header__nav-column">
@@ -74,14 +74,14 @@
                 <h4 class="projects__caption caption headline4">Our projects</h4>
                 <div class="projects__item projects__item-expo2020 ">
                     <div class="projects__item-pic">
-                        <img class project__img src="../Monstrum/img/prj_expo2020.png" alt="EXPO 2020">
+                        <img class project__img src="img/prj_expo2020.png" alt="EXPO 2020">
                     </div>
                     <h4 class="projects__item-title headline4">EXPO 2020</h4>
                     <p class="projects__item-descr text2">EXPO 2020, Dubai, UAE</p>
                 </div>
                 <div class="projects__item projects__item-giants">
                     <div class="projects__item-pic">
-                        <img class project__img src="../Monstrum/img/prj_rivergiants.png" alt="The River Giants">
+                        <img class project__img src="img/prj_rivergiants.png" alt="The River Giants">
                     </div>
                     <h4 class="projects__item-title headline4">The River Giants</h4>
                     <p class="projects__item-descr text2">Tulsa, Oklahoma, USA</p>
@@ -93,21 +93,21 @@
                 </div>
                 <div class="projects__item projects__item-globe">
                     <div class="projects__item-pic">
-                        <img class project__img src="../Monstrum/img/prj_globe.png" alt="The Globe">
+                        <img class project__img src="img/prj_globe.png" alt="The Globe">
                     </div>
                     <h4 class="projects__item-title headline4">The Globe</h4>
                     <p class="projects__item-descr text2">Aarhus, Denmark</p>
                 </div>
                 <div class="projects__item projects__item-surfer">
                     <div class="projects__item-pic">
-                        <img class project__img src="../Monstrum/img/prj_surfer.png" alt="Surfer's Paradise">
+                        <img class project__img src="img/prj_surfer.png" alt="Surfer's Paradise">
                     </div>
                     <h4 class="projects__item-title headline4">Surfer&rsquo;s Paradise</h4>
                     <p class="projects__item-descr text2">Helsingborg, Sweden</p>
                 </div>
                 <div class="projects__item projects__item-plantsVsZ">
                     <div class="projects__item-pic">
-                        <img class project__img src="../Monstrum/img/prj_plantsVsZ.png" alt="Plants vs. Zombies">
+                        <img class project__img src="img/prj_plantsVsZ.png" alt="Plants vs. Zombies">
                     </div>
                     <h4 class="projects__item-title headline4">Plants vs. Zombies</h4>
                     <p class="projects__item-descr text2">Wuxi, China</p>
@@ -185,7 +185,7 @@
                     <a class="news__descr-link link2" href="#">Read</a>
                 </div>
                 <div class="news__pic">
-                    <img src="../Monstrum/img/news-point-day.png" alt="Monstrum playground">
+                    <img src="img/news-point-day.png" alt="Monstrum playground">
                 </div>
             </div>
             <div class="news__view grid">
@@ -207,7 +207,7 @@
             <div class="footer-bottom grid">
                 <div class="footer-bottom__info">
                     <a class="logo footer-bottom__logo" href="#">
-                        <img class="logo-img" src="../Monstrum/img/Logo Desktop.svg" alt="">
+                        <img class="logo-img" src="img/Logo Desktop.svg" alt="">
                     </a>
                     <p class="footer-bottom__tel menu-font">
                         + 45 33 22 10 77
