--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>MONSTRUM</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <script defer src="js/script.js"></script>
   </head>
 
   <body>
@@ -14,25 +15,37 @@
       <header class="header">
         <div class="container">
           <div class="hero__header-inner grid">
-            <a class="logo hero__logo" href="#">
+            <a class="logo header__logo" href="#">
               <img class="logo-img" src="img/Logo Desktop.svg" alt="" />
             </a>
             <nav class="nav header__nav">
               <ul class="header__nav-column">
-                <li class="header__nav-item menu-font">Projects</li>
-                <li class="header__nav-item menu-font">Approach</li>
-                <li class="header__nav-item menu-font">News</li>
+                <li class="header__nav-item menu-font menu-font--mob">
+                  Projects
+                </li>
+                <li class="header__nav-item menu-font menu-font--mob">
+                  Approach
+                </li>
+                <li class="header__nav-item menu-font menu-font--mob">News</li>
               </ul>
               <ul class="header__nav-column">
-                <li class="header__nav-item menu-font">About</li>
-                <li class="header__nav-item menu-font">Contact</li>
-                <li class="header__nav-item menu-font">Team</li>
+                <li class="header__nav-item menu-font menu-font--mob">About</li>
+                <li class="header__nav-item menu-font menu-font--mob">
+                  Contact
+                </li>
+                <li class="header__nav-item menu-font menu-font--mob">Team</li>
               </ul>
             </nav>
             <div class="header__lang">
               <p class="header__lang-btn menu-font menu-font--opacity1">EN</p>
-              <p class="header__lang-btn menu-font menu-font--opacity1">DA</p>
+              <p class="header__lang-btn menu-font">DA</p>
             </div>
+            <button class="hero__mob-menu-btn mob-menu-btn mob-menu-btn--open">
+              Menu
+            </button>
+            <button class="hero__mob-menu-btn mob-menu-btn mob-menu-btn--close">
+              Close
+            </button>
           </div>
         </div>
       </header>
