--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <div class="awards__item">
             <div class="awards__name headline4 headline4--medium">
               <h4 class="awards__name-year">2022</h4>
-              <h4 class="awards__title-name">German Design Award</h4>
+              <h4 class="awards__name-title">German Design Award</h4>
             </div>
             <p class="awards__details text2">
               Special Mention, Surfer&rsquo;s Paradise, Helsingborg, Sweden
@@ -183,7 +183,7 @@
           <div class="awards__item">
             <div class="awards__name headline4 headline4--medium">
               <h4 class="awards__name-year">2021</h4>
-              <h4 class="awards__title-name">German Design Award</h4>
+              <h4 class="awards__name-title">German Design Award</h4>
             </div>
             <p class="awards__details text2">
               Winner&nbsp;&mdash; Gold, The Historical Playground, Viborg,
@@ -193,7 +193,7 @@
           <div class="awards__item">
             <div class="awards__name headline4 headline4--medium">
               <h4 class="awards__name-year">2021</h4>
-              <h4 class="awards__title-name">German Design Award</h4>
+              <h4 class="awards__name-title">German Design Award</h4>
             </div>
             <p class="awards__details text2">
               Special Mention, The Colourful Peacock &amp;&nbsp;The Hong Kong
@@ -203,7 +203,7 @@
           <div class="awards__item">
             <div class="awards__name headline4 headline4--medium">
               <h4 class="awards__name-year">2012-2018</h4>
-              <h4 class="awards__title-name">Gazelle Award</h4>
+              <h4 class="awards__name-title">Gazelle Award</h4>
             </div>
             <p class="awards__details text2">
               Special Mention, Surfer&rsquo;s Paradise, Helsingborg, Sweden
@@ -212,7 +212,7 @@
           <div class="awards__item">
             <div class="awards__name headline4 headline4--medium">
               <h4 class="awards__name-year">2018</h4>
-              <h4 class="awards__title-name">IDA International Design Award</h4>
+              <h4 class="awards__name-title">IDA International Design Award</h4>
             </div>
             <p class="awards__details text2">
               Winner, Mobile Home for Homeless, Charity project, Denmark
