Feat: make news section responsive

--- a/index.html
+++ b/index.html
@@ -226,8 +226,13 @@
       <div class="container">
         <div class="news__inner section-border-line grid">
           <h4 class="news__caption caption headline4">News</h4>
-          <p class="news__date text2">March&nbsp;15,2022</p>
-          <h3 class="news__title headline3">Pointless play</h3>
+          <div class="news__pic">
+            <img src="img/news-point-day.png" alt="Monstrum playground" />
+          </div>
+          <p class="news__date text2">March&nbsp;15, 2022</p>
+          <h3 class="news__title headline3 headline3--sm-medium">
+            Pointless play
+          </h3>
           <div class="news__descr">
             <div class="news__descr-text text2">
               <p>
@@ -244,10 +249,9 @@
                 imaginations and explore using all their senses.
               </p>
             </div>
-            <a class="news__descr-link link2" href="#">Read</a>
-          </div>
-          <div class="news__pic">
-            <img src="img/news-point-day.png" alt="Monstrum playground" />
+            <div class="news__descr-link">
+              <a class="link2" href="#">Read</a>
+            </div>
           </div>
         </div>
         <div class="news__view grid">
