Fix: add closing picture tag in the news section

--- a/index.html
+++ b/index.html
@@ -228,24 +228,29 @@
           <h4 class="news__caption caption headline4">News</h4>
           <div class="news__pic">
             <picture>
-            <source  type="image/webp"
-              srcset="
-                img/news_pointless-day_1x.webp 1x,
-                img/news_pointless-day_2x.webp 2x"       
-            />
-            <source  type="image/png"
-              srcset="
-                img/news_pointless-day_1x.png 1x,
-                img/news_pointless-day_2x.png 2x"
-            />
-            <img
-              src="img/news_pointless-day_1x.png"
-              alt="Children playing on a Monstrum playground"
-              srcset="
-                img/news_pointless-day_1x.png 1x,
-                img/news_pointless-day_2x.png 2x"
-            />
-            <!-- </picture> -->
+              <source
+                type="image/webp"
+                srcset="
+                  img/news_pointless-day_1x.webp 1x,
+                  img/news_pointless-day_2x.webp 2x
+                "
+              />
+              <source
+                type="image/png"
+                srcset="
+                  img/news_pointless-day_1x.png 1x,
+                  img/news_pointless-day_2x.png 2x
+                "
+              />
+              <img
+                src="img/news_pointless-day_1x.png"
+                alt="Children playing on a Monstrum playground"
+                srcset="
+                  img/news_pointless-day_1x.png 1x,
+                  img/news_pointless-day_2x.png 2x
+                "
+              />
+            </picture>
           </div>
           <p class="news__date text2">March&nbsp;15, 2022</p>
           <h3 class="news__title headline3 headline3--sm-medium">
