Feat: optimize images in projects, news sections

--- a/index.html
+++ b/index.html
@@ -89,12 +89,36 @@
           <div class="projects__grid grid">
             <div class="projects__item projects__item-expo2020">
               <div class="projects__item-pic">
-                <img
-                  class
-                  project__img
-                  src="img/prj_expo2020.png"
-                  alt="EXPO 2020"
-                />
+                <picture>
+                  <source
+                    type="image/webp"
+                    srcset="
+                      img/projects_expo2020_1x.webp 1x,
+                      img/projects_expo2020_2x.webp 2x,
+                      img/projects_expo2020_3x.webp 3x,
+                      img/projects_expo2020_4x.webp 4x
+                    "
+                  />
+                  <source
+                    type="image/png"
+                    srcset="
+                      img/projects_expo2020_1x.png 1x,
+                      img/projects_expo2020_2x.png 2x,
+                      img/projects_expo2020_3x.png 3x,
+                      img/projects_expo2020_4x.png 4x
+                    "
+                  />
+                  <img
+                    src="img/projects_expo2020_1x.png"
+                    alt="A futuristic city featuring a radio tower designed as a playground"
+                    srcset="
+                      img/projects_expo2020_1x.png 1x,
+                      img/projects_expo2020_2x.png 2x,
+                      img/projects_expo2020_3x.png 3x,
+                      img/projects_expo2020_4x.png 4x
+                    "
+                  />
+                </picture>
               </div>
               <h4 class="projects__item-title headline4 headline4--lg">
                 EXPO 2020
@@ -103,11 +127,31 @@
             </div>
             <div class="projects__item projects__item-giants">
               <div class="projects__item-pic projects__item-pic--main">
-                <img
-                  class="projects__main-pic"
-                  src="img/prj_rivergiants.png"
-                  alt="The River Giants"
-                />
+                <picture>
+                  <source
+                    type="image/webp"
+                    srcset="
+                      img/projects_the-river-giants_1x.webp   1x,
+                      img/projects_the-river-giants_1.5x.webp 1.5x,
+                      img/projects_the-river-giants_2x.webp   2x
+                    "
+                    type="image/png"
+                    srcset="
+                      img/projects_the-river-giants_1x.png   1x,
+                      img/projects_the-river-giants_1.5x.png 1.5x,
+                      img/projects_the-river-giants_2x.png   2x
+                    "
+                  />
+                  <img
+                    src="img/projects_the-river-giants_1x.png"
+                    alt="A children's playground featuring two giant herons"
+                    srcset="
+                      img/projects_the-river-giants_1x.png   1x,
+                      img/projects_the-river-giants_1.5x.png 1.5x,
+                      img/projects_the-river-giants_2x.png   2x
+                    "
+                  />
+                </picture>
               </div>
               <h4 class="projects__item-title headline4 headline4--lg">
                 The River Giants
@@ -122,12 +166,36 @@
             </div>
             <div class="projects__item projects__item-globe">
               <div class="projects__item-pic">
-                <img
-                  class
-                  project__img
-                  src="img/prj_globe.png"
-                  alt="The Globe"
-                />
+                <picture>
+                  <source
+                    type="image/webp"
+                    srcset="
+                      img/projects_the-globe_1x.webp 1x,
+                      img/projects_the-globe_2x.webp 2x,
+                      img/projects_the-globe_3x.webp 3x,
+                      img/projects_the-globe_4x.webp 3x
+                    "
+                  />
+                  <source
+                    type="image/png"
+                    srcset="
+                      img/projects_the-globe_1x.png 1x,
+                      img/projects_the-globe_2x.png 2x,
+                      img/projects_the-globe_3x.png 3x,
+                      img/projects_the-globe_4x.png 4x
+                    "
+                  />
+                  <img
+                    src="img/projects_the-globe_1x.png"
+                    alt="A children's playground in the shape of the volcano"
+                    srcset="
+                      img/projects_the-globe_1x.png 1x,
+                      img/projects_the-globe_2x.png 2x,
+                      img/projects_the-globe_3x.png 3x,
+                      img/projects_the-globe_4x.png 4x
+                    "
+                  />
+                </picture>
               </div>
               <h4 class="projects__item-title headline4 headline4--lg">
                 The Globe
@@ -136,12 +204,36 @@
             </div>
             <div class="projects__item projects__item-surfer">
               <div class="projects__item-pic">
-                <img
-                  class
-                  project__img
-                  src="img/prj_surfer.png"
-                  alt="Surfer's Paradise"
-                />
+                <picture>
+                  <source
+                    type="image/webp"
+                    srcset="
+                      img/projects_surfers-paradise_1x.webp 1x,
+                      img/projects_surfers-paradise_2x.webp 2x,
+                      img/projects_surfers-paradise_3x.webp 3x,
+                      img/projects_surfers-paradise_4x.webp 4x
+                    "
+                  />
+                  <source
+                    type="image/png"
+                    srcset="
+                      img/projects_surfers-paradise_1x.png 1x,
+                      img/projects_surfers-paradise_2x.png 2x,
+                      img/projects_surfers-paradise_3x.png 3x,
+                      img/projects_surfers-paradise_4x.png 4x
+                    "
+                  />
+                  <img
+                    src="img/projects_surfers-paradise_1x.png"
+                    alt="A children's playground in the shape of a giant jellyfish"
+                    srcset="
+                      img/projects_surfers-paradise_1x.png 1x,
+                      img/projects_surfers-paradise_2x.png 2x,
+                      img/projects_surfers-paradise_3x.png 3x,
+                      img/projects_surfers-paradise_4x.png 4x
+                    "
+                  />
+                </picture>
               </div>
               <h4 class="projects__item-title headline4 headline4--lg">
                 Surfer&rsquo;s Paradise
@@ -150,12 +242,38 @@
             </div>
             <div class="projects__item projects__item-plantsVsZ">
               <div class="projects__item-pic">
-                <img
-                  class
-                  project__img
-                  src="img/prj_plantsVsZ.png"
-                  alt="Plants vs. Zombies"
-                />
+                <picture>
+                  <source
+                    type="image/webp"
+                    srcset="
+                      img/projects_plants-vs-zombies_1x.webp 1x,
+                      img/projects_plants-vs-zombies_2x.webp 2x,
+                      img/projects_plants-vs-zombies_3x.webp 3x,
+                      img/projects_plants-vs-zombies_4x.webp 4x
+                    "
+                  />
+                  <source
+                    type="image/png"
+                    srcset="
+                      img/projects_plants-vs-zombies_1x.png 1x,
+                      img/projects_plants-vs-zombies_2x.png 2x,
+                      img/projects_plants-vs-zombies_3x.png 3x,
+                      img/projects_plants-vs-zombies_4x.png 4x
+                    "
+                  />
+
+                  <img
+                    src="img/projects_plants-vs-zombies_1x.png"
+                    alt="A playground designed with a Plants vs. Zombies theme"
+                    srcset="
+                      img/projects_plants-vs-zombies_1x.png 1x,
+                      img/projects_plants-vs-zombies_2x.png 2x,
+                      img/projects_plants-vs-zombies_3x.png 3x,
+                      img/projects_plants-vs-zombies_4x.png 4x
+                    "
+                  />
+                  />
+                </picture>
               </div>
               <h4 class="projects__item-title headline4 headline4--lg">
                 Plants vs. Zombies
@@ -244,7 +362,7 @@
               />
               <img
                 src="img/news_pointless-day_1x.png"
-                alt="Children playing on a Monstrum playground"
+                alt="Children playing on a playground that features tower for climbing"
                 srcset="
                   img/news_pointless-day_1x.png 1x,
                   img/news_pointless-day_2x.png 2x
