Fix: rearrange headline tags and change head title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MONSTRUM</title>
+    <title>
+      Monstrum designs playgrounds for kids focusing on artistic and
+      architectural quality
+    </title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
     <script defer src="js/script.js"></script>
@@ -50,21 +53,21 @@
         </div>
       </header>
       <div class="hero__content">
-        <h1 class="hero__headline1 headline1">
+        <h1 class="hero__title headline1">
           We&nbsp;create playgrounds sparking imagination
         </h1>
-        <h4 class="hero__headline4 headline4">
+        <p class="hero__descr headline4">
           Based on&nbsp;visual arts and design, MONSTRUM create playgrounds that
           inspire kids to&nbsp;play by&nbsp;providing an&nbsp;adventurous scene,
           where there is&nbsp;space for the imagination.
-        </h4>
+        </p>
         <div class="hero__vline"></div>
       </div>
     </section>
     <section class="phylosophy rounded-corners rounded-corners--white">
       <div class="container">
         <div class="phylosophy__inner section-border-line">
-          <h4 class="phylosophy__caption caption headline4">Our phylosophy</h4>
+          <h2 class="phylosophy__caption caption headline4">Our phylosophy</h2>
           <div class="phylosophy__content">
             <p class="phylosophy__text1 text1">
               The designs of&nbsp;MONSTRUM&rsquo;s playgrounds are based
@@ -85,7 +88,7 @@
     <section class="projects">
       <div class="container">
         <div class="projects__inner section-border-line">
-          <h4 class="projects__caption caption headline4">Our projects</h4>
+          <h2 class="projects__caption caption headline4">Our projects</h2>
           <div class="projects__grid grid">
             <div class="projects__item projects__item-expo2020">
               <div class="projects__item-pic">
@@ -120,9 +123,9 @@
                   />
                 </picture>
               </div>
-              <h4 class="projects__item-title headline4 headline4--lg">
+              <p class="projects__item-title headline4 headline4--lg">
                 EXPO 2020
-              </h4>
+              </p>
               <p class="projects__item-descr text2">EXPO 2020, Dubai, UAE</p>
             </div>
             <div class="projects__item projects__item-giants">
@@ -153,16 +156,16 @@
                   />
                 </picture>
               </div>
-              <h4 class="projects__item-title headline4 headline4--lg">
+              <p class="projects__item-title headline4 headline4--lg">
                 The River Giants
-              </h4>
+              </p>
               <p class="projects__item-descr text2">Tulsa, Oklahoma, USA</p>
             </div>
             <div class="projects__item projects__item-inspiring">
-              <h3 class="projects__item-inspiring-text headline3">
+              <p class="projects__item-inspiring-text headline3">
                 <span class="headline3--color-text2">Inspiring</span> kids to
                 move
-              </h3>
+              </p>
             </div>
             <div class="projects__item projects__item-globe">
               <div class="projects__item-pic">
@@ -197,9 +200,9 @@
                   />
                 </picture>
               </div>
-              <h4 class="projects__item-title headline4 headline4--lg">
+              <p class="projects__item-title headline4 headline4--lg">
                 The Globe
-              </h4>
+              </p>
               <p class="projects__item-descr text2">Aarhus, Denmark</p>
             </div>
             <div class="projects__item projects__item-surfer">
@@ -235,9 +238,9 @@
                   />
                 </picture>
               </div>
-              <h4 class="projects__item-title headline4 headline4--lg">
+              <p class="projects__item-title headline4 headline4--lg">
                 Surfer&rsquo;s Paradise
-              </h4>
+              </p>
               <p class="projects__item-descr text2">Helsingborg, Sweden</p>
             </div>
             <div class="projects__item projects__item-plantsVsZ">
@@ -272,12 +275,11 @@
                       img/projects_plants-vs-zombies_4x.png 4x
                     "
                   />
-                  />
                 </picture>
               </div>
-              <h4 class="projects__item-title headline4 headline4--lg">
+              <p class="projects__item-title headline4 headline4--lg">
                 Plants vs. Zombies
-              </h4>
+              </p>
               <p class="projects__item-descr text2">Wuxi, China</p>
             </div>
           </div>
@@ -288,11 +290,11 @@
     <section class="awards">
       <div class="container">
         <div class="awards__inner section-border-line grid">
-          <h4 class="awards__caption caption headline4">Awards</h4>
+          <h2 class="awards__caption caption headline4">Awards</h2>
           <div class="awards__item">
             <div class="awards__name headline4 headline4--medium">
-              <h4 class="awards__name-year">2022</h4>
-              <h4 class="awards__name-title">German Design Award</h4>
+              <p class="awards__name-year">2022</p>
+              <p class="awards__name-title">German Design Award</p>
             </div>
             <p class="awards__details text2">
               Special Mention, Surfer&rsquo;s Paradise, Helsingborg, Sweden
@@ -300,8 +302,8 @@
           </div>
           <div class="awards__item">
             <div class="awards__name headline4 headline4--medium">
-              <h4 class="awards__name-year">2021</h4>
-              <h4 class="awards__name-title">German Design Award</h4>
+              <p class="awards__name-year">2021</p>
+              <p class="awards__name-title">German Design Award</p>
             </div>
             <p class="awards__details text2">
               Winner&nbsp;&mdash; Gold, The Historical Playground, Viborg,
@@ -310,8 +312,8 @@
           </div>
           <div class="awards__item">
             <div class="awards__name headline4 headline4--medium">
-              <h4 class="awards__name-year">2021</h4>
-              <h4 class="awards__name-title">German Design Award</h4>
+              <p class="awards__name-year">2021</p>
+              <p class="awards__name-title">German Design Award</p>
             </div>
             <p class="awards__details text2">
               Special Mention, The Colourful Peacock &amp;&nbsp;The Hong Kong
@@ -320,8 +322,8 @@
           </div>
           <div class="awards__item">
             <div class="awards__name headline4 headline4--medium">
-              <h4 class="awards__name-year">2012-2018</h4>
-              <h4 class="awards__name-title">Gazelle Award</h4>
+              <p class="awards__name-year">2012-2018</p>
+              <p class="awards__name-title">Gazelle Award</p>
             </div>
             <p class="awards__details text2">
               Special Mention, Surfer&rsquo;s Paradise, Helsingborg, Sweden
@@ -329,8 +331,8 @@
           </div>
           <div class="awards__item">
             <div class="awards__name headline4 headline4--medium">
-              <h4 class="awards__name-year">2018</h4>
-              <h4 class="awards__name-title">IDA International Design Award</h4>
+              <p class="awards__name-year">2018</p>
+              <p class="awards__name-title">IDA International Design Award</p>
             </div>
             <p class="awards__details text2">
               Winner, Mobile Home for Homeless, Charity project, Denmark
@@ -343,7 +345,7 @@
     <section class="news">
       <div class="container">
         <div class="news__inner section-border-line grid">
-          <h4 class="news__caption caption headline4">News</h4>
+          <h2 class="news__caption caption headline4">News</h2>
           <div class="news__pic">
             <picture>
               <source
@@ -371,7 +373,7 @@
             </picture>
           </div>
           <p class="news__date text2">March&nbsp;15, 2022</p>
-          <h3 class="news__title headline3 headline3--sm-medium">
+          <h3 class="news__title headline3 headline3--medium-mob">
             Pointless play
           </h3>
           <div class="news__descr">
@@ -405,16 +407,16 @@
         <div class="footer__marquee"></div>
         <div class="footer-talk">
           <div class="footer__inner-wrap">
-            <h1
+            <h2
               class="footer-talk__title footer-talk__title--right-img headline1 headline1--white"
             >
               Want to have
-            </h1>
-            <h1
+            </h2>
+            <h2
               class="footer-talk__title footer-talk__title--left-img headline1 headline1--white"
             >
               a talk?
-            </h1>
+            </h2>
           </div>
           <div class="footer-talk__btn footer-talk__btn-text">Contact</div>
         </div>
